k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: duy-spring-service
spec:
  selector:
    app: duy-spring
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
